--- a/MauiApp1/App.xaml
+++ b/MauiApp1/App.xaml
@@ -2,6 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:MauiApp1"
+             xmlns:converters="clr-namespace:MauiApp1.Converters"
              x:Class="MauiApp1.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,6 +10,14 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            
+            <!-- Converters -->
+            <converters:StatusColorConverter x:Key="StatusColorConverter" />
+            <converters:PriorityColorConverter x:Key="PriorityColorConverter" />
+            <converters:EmptyStringConverter x:Key="EmptyStringConverter" />
+            <converters:NullToBoolConverter x:Key="NullToBoolConverter" />
+            <converters:InvertedBoolConverter x:Key="InvertedBoolConverter" />
+            <converters:SelectedFilterButtonColorConverter x:Key="SelectedFilterButtonColorConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
